alignment issue of table

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -2,11 +2,15 @@
     margin-top: 110px;
     /* background-color: gray; */
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 .back-to-home-tab{
     color: aqua;
     cursor: pointer;
+    width: 100%;
 }
 .left-arrow{
     display: inline-block;
@@ -19,6 +23,7 @@
 .table-title{
     color: #E2E8F0;
     font-size: 48px;
+    width: 100%;
 }
 .main-table{
     margin-top: 10px;
